refactor: toList 이용